--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ nav ul a {
 
 .hero-bg {
   height: 900px;
+  opacity: 0;
   background-image: url('../pics/home/hero-bg.png');
   background-position: center;
   background-repeat: no-repeat;
