--- a/css/main.css
+++ b/css/main.css
@@ -147,9 +147,10 @@ a {
 }
 
 .showcase-item img {
-  width: 100%;
+  width: 80%;
   object-fit: scale-down;
   animation: fadeInRight 1s ease-in-out 0s 1;
+  box-shadow: 1px 1px 5px #d5d5d5;
 }
 
 @media (min-width: 1200px) {
