--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ strong {
 
 a {
   text-decoration: none;
-  color: #694F45;
 }
 
 .hero-header {
@@ -113,7 +112,7 @@ a {
 }
 
 .showcase-item h2 {
-  font-family: 'ChaparralPro-Bold';
+  font-family: ChaparralPro-Bold;
   font-size: 50px;
   margin-top: 20px;
   animation: fadeInUp 1s ease-in-out 0.5s forwards;
@@ -252,3 +251,34 @@ a {
 .about-content {
   margin: 20px 0;
 }
+
+
+/* project detail pages */
+
+.project-detail-page h1 {
+  text-align: center;
+  font-family: ChaparralPro-Bold;
+  font-size: 40px;
+}
+
+.project-detail-page p {
+  font-family: FuturaPTBook;
+  font-size: 19px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/
