CSS for projects

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,7 +26,9 @@ layout: skeleton
 
 {% include navbar.html %}
 
-{{ content }}
+<div class="project">
+  {{ content }}
+</div>
 
 <div class="container">
   <div class="row justify-content-between">
