--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,3 +252,16 @@ a {
 .about-content {
   margin: 20px 0;
 }
+
+/* Projects Page */
+
+.project h1 {
+  text-align: center;
+  font-family: ChaparralPro-Bold;
+  font-size: 40px;
+}
+
+.project p {
+  font-family: FuturaPTBook;
+  font-size: 19px;
+}
